# local-markdown-presentation

./: .dockerignore  Dockerfile  Dockerfile.old  Makefile  README.md  app.py  config.py  pyproject.toml  selectSlide.html  showSlide.html  showSlide.py
_slides/: HPC.md  Python-Tutorial-0.md  Python-Tutorial-1.md  Python-Tutorial-2.md  README.md  test.md
views/: selectSlides.py  showSlide.py
