[tool.poetry]
name = "local-presentation"
version = "0.1.0"
description = "local presentation CLI for .md slides"
authors = ["Liu Zhe You"]
readme = "README.md"
packages = [{include = "local_presentation"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
